Added esbuild. Added Service Worker. Added new config to package.json.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Julian Palavecino <samuguayfenix@gmail.com>",
+  "type": "module",
   "license": "MIT",
+  "scripts": {
+    "dev": "node config/esbuild.js"
+  },
   "devDependencies": {
     "esbuild": "^0.15.1"
   }
