--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "esbuild": "^0.15.1"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "dexie": "^3.2.2"
   }
 }
