--- a/lib/manifest.example.json
+++ b/lib/manifest.example.json
@@ -1,12 +1,13 @@
 {
     "manifest_version": 3,
-    "name": "Reto Scraping Krowdy",
+    "name": "Reto Scrapping Krowdy",
     "version": "0.0.1",
     "action": {
-        "default_title": "Start scraping"
+        "default_title": "Start scrapping"
     },
     "background": {
         "service_worker": "sw.js"
     },
-    "permissions": ["scripting", "activeTab", "tabs"]
+    "permissions": ["scripting", "activeTab", "tabs"],
+    "host_permissions": ["https://*/*"]
 }
